feat: add Playwright configuration and initial comment flow tests
- Introduced Playwright configuration for end-to-end testing in `playwright.config.ts`.
- Created a `.last-run.json` file to track test results.
- Implemented `comment-flow.spec.ts` to test user registration, login, comment posting, and replying functionalities.
- Added a comprehensive task specification document for Spring Boot best practices and test coverage improvements.